--- a/git使用方法.html
+++ b/git使用方法.html
@@ -5,11 +5,18 @@
 		<meta content='zhanyue@163.com' name='author'>
 		<meta content='using git from the first step.' name='description'>
 		<title>git使用方法初步整理</title>
-		<script type="text/javascript" src="/Users/yuzuhang/Documents/Programming/html5/jquery-2.1.3.js"></script>
-		<script type="text/javascript">
-			$(document).ready(function(){
-				// $('div').css('background-color', '#ff0088');	
-			})
+		<script type="text/javascript" src="/Users/yuzuhang/Documents/git_zhanyue/myTest/jquery-2.1.3.js"></script>
+		<script type="text/javascript" src="/Users/yuzuhang/Documents/git_zhanyue/myTest/underscore-min.js"></script>
+		<script type="text/javascript" src="practice.js"></script>
+		<script>
+		$(document).ready(function(){
+			// window.onload = test;
+			// $('#aThree')[0].style.backgroundColor='#333'
+			document.getElementById('aThree').style.background = '#444'
+			$('p #someId .someClass').text('123');
+			// $('.blurry !.foggy').remove().append('<span>Last</span>');
+			// $('#first').siblings[0].remove().parent().append('<span>Last</span>')
+		})
 		</script>
 		<style type="text/css">
 		body {
@@ -22,14 +29,25 @@
 			margin: 10 10;
 			padding:10 10;
 		}
-		.li_git {
+		ol {
+			list-style-type: disc;
 		}
+	
 		span {
 			color: red;
 		}
 		</style>
 	</head>
 	<body>
+		<a href="javascript:;">这个链接点击之后不会做任何事情，如果去掉 void()，点击之后整个页面会被替换成一个字符 0。</a>
+		</br>
+		<a href="javascript:void(document.body.style.backgroundColor='green');">点击这个链接会让页面背景变成绿色。</a>
+		</br>
+		<a href="javascript:new Date().toLocaleTimeString();"> What time is it?</a>
+		</br>
+		<a href="javascript:alert(new Date().toLocaleTimeString());"> Check the time without overwriting the document</a>
+		</br>
+		<a href="javascript:void window.open('about:blank');">Open Window</a>
 		<div class="full_content">
 			<h1>操作步骤：</h1>
 			<ol class="ol_git">
@@ -47,6 +65,7 @@
 		<div>
 			<h1>其他命令及说明：</h1>
 			<ol>
+				<span>123455</span>
 				<li><span>git status:</span>查看状态</li>
 				<li><span>git diff 文件.xxx：</span>比较不同</li>
 				<li><span>git log：</span>查看修改记录</li>
@@ -54,9 +73,31 @@
 				<li><span>git reset  –hard HEAD~100:</span>回退到前100个版本</li>
 				<li><span>git reset  –hard 版本号:</span>按照版本号回退</li>
 				<li><span>git reflog:</span>查看版本号</li>
-				<li><span>git reset HEAS ff.xxx:</span>撤销add缓存区操作</li>
+				<li><span>git reset HEAD ff.xxx:</span>撤销add缓存区操作</li>
 				<li><span>git checkout -- ff.xxx:</span>git add后，有新的更改，该命令可以撤销更改</li>
 			</ol>
 		</div>
+
+		<div>
+			<div id="divOne" onclick="alert('111')">
+				<div id="divTwo" onclick="alert('222')">
+					<a id='aThree' onclick="alert('333')">惦记我</a>
+					<div onclick="alert('444')">here</div>
+				</div>
+				
+			</div>
+		</div>
+
+
+	<div>
+		<p id='aaaa'>
+			<div class='bbbb'>123</div>
+		</p>
+	</div>
+
+		<!-- <span id='first'>A</span>
+		<span class='blurry'>B</span>
+		<span>C</span>
+		<span class='blurry foggy'>D</span> -->
 	</body>
 </html>
