1:change the file git使用方法.html;2:add file reading.md

--- a/git使用方法.html
+++ b/git使用方法.html
@@ -90,11 +90,10 @@
 
 
 	<div>
-		<p id='aaaa'>
-			<div class='bbbb'>123</div>
+		<p id='iA'>
+			<div class='cB'>123</div>
 		</p>
 	</div>
-
 		<!-- <span id='first'>A</span>
 		<span class='blurry'>B</span>
 		<span>C</span>
